// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isDisabled 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-label="action"
    class="pf-c-dropdown__toggle-button"
    disabled=""
    id="action"
  />
</div>
`;

exports[`passing class 1`] = `
<div>
  <button
    aria-label="action"
    class="pf-c-dropdown__toggle-button abc"
    id="action"
  />
</div>
`;

exports[`renders with text 1`] = `
<div>
  <button
    aria-label="action"
    class="pf-c-dropdown__toggle-button"
    id="action"
  />
</div>
`;
